chore: add mui primary color in style header

--- a/src/view/popup/index.html
+++ b/src/view/popup/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Popup</title>
+    <style>
+      :root {
+        --md-sys-color-primary: #0f7dff;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
